# adaptive-vs-random-testing

./: README.md  app.py  pyproject.toml
group_project/: __init__.py  app.py  art_surface.py  colors.py  competition.py  game.py  group_project.py  rt_surface.py  test_surface.py  window.py
group_project/globals/: dimensions.py
group_project/surfaces/: art_surface.py  rt_surface.py  test_surface.py
tests/: test_group_project.py
