[tool.poetry]
name = "group-project"
version = "0.1.0"
description = ""
authors = ["Ed Jones <edjones1999@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
display = "^1.0.0"
pygame = "2.0.0.dev6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
group-project = "group_project:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

